--- a/result_process2pred.json.ipynb
+++ b/result_process2pred.json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,35 +334,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2593\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2593/2593 [00:19<00:00, 136.43it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2594\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2594/2594 [00:20<00:00, 126.12it/s]\n"
+      "100%|██████████| 2593/2593 [00:22<00:00, 115.37it/s]\n",
+      "100%|██████████| 2594/2594 [00:21<00:00, 119.25it/s]\n"
      ]
     }
    ],
@@ -415,10 +395,10 @@
     "            if len(col_record_x2[col_end]) == 0:\n",
     "                continue\n",
     "\n",
-    "            x1 = np.mean(col_record_x1[col_start])\n",
-    "            x2 = np.mean(col_record_x2[col_end])\n",
-    "            y1 = np.mean(row_record_y1[row_start])\n",
-    "            y2 = np.mean(row_record_y2[row_end])\n",
+    "            x1 = int(np.mean(col_record_x1[col_start]))\n",
+    "            x2 = int(np.mean(col_record_x2[col_end]))\n",
+    "            y1 = int(np.mean(row_record_y1[row_start]))\n",
+    "            y2 = int(np.mean(row_record_y2[row_end]))\n",
     "            table_new['cells'][i]['bbox'] = [x1, y1, x2, y2]\n",
     "            table_new['cells'][i]['segmentation'] = [[[x1, y1], [x2, y1], [x2, y2], [x1, y2]]]\n",
     "    \n",
@@ -441,16 +421,13 @@
     "    #     table_new['cells'][i]['segmentation'] = [[[x1, y1], [x2, y1], [x2, y2], [x1, y2]]]\n",
     "    return table_new\n",
     "\n",
-    "save_dir = \"./output/structure_result/test_A-pred.json\"\n",
+    "save_dir = \"./output/structure_result/test_A_jpg-pred.json\"\n",
     "jpg_json_path = \"/media/ubuntu/Date12/TableStruct/data/test_A_jpg.json\"\n",
     "jpg_info = json.load(open(jpg_json_path, 'r'))\n",
     "\n",
     "for result_file in glob(\"./output/structure_result/test_A_jpg/structure_master_results_*.pkl\"):\n",
-    "\n",
     "    with open(result_file, 'rb') as f:\n",
     "        result_data = pickle.load(f)\n",
-    "\n",
-    "    print(len(result_data))\n",
     "\n",
     "    for imgname, result in tqdm(result_data.items()):\n",
     "        bboxes = remove_empty_bboxes(result['bbox'])\n",
@@ -468,13 +445,24 @@
     "        \n",
     "        # bbox放缩恢复\n",
     "        img_id = imgname.split(\".\")[0]\n",
+    "        if 'jpg' not in save_dir: # 保存jpg的预测结果，无需缩放\n",
+    "            for idx, cell in enumerate(table_new['cells']):\n",
+    "                cell[\"bbox\"] = np.array(cell[\"bbox\"]) / jpg_info[img_id][\"scale\"]\n",
+    "                cell[\"bbox\"] = cell[\"bbox\"].astype(np.int32).tolist()\n",
+    "                segmentation = []\n",
+    "                for seg in cell[\"segmentation\"]:\n",
+    "                    seg = np.array(seg) / jpg_info[img_id][\"scale\"]\n",
+    "                    seg = seg.astype(np.int32).tolist()\n",
+    "                    segmentation.append(seg)\n",
+    "                cell[\"segmentation\"] =segmentation \n",
+    "                table_new['cells'][idx] = cell\n",
+    "\n",
+    "        # 坐标值统一int32\n",
     "        for idx, cell in enumerate(table_new['cells']):\n",
-    "            cell[\"bbox\"] = np.array(cell[\"bbox\"]) / jpg_info[img_id][\"scale\"]\n",
-    "            cell[\"bbox\"] = cell[\"bbox\"].astype(np.int32).tolist()\n",
+    "            cell[\"bbox\"] = np.array(cell[\"bbox\"]).astype(np.int32).tolist()\n",
     "            segmentation = []\n",
     "            for seg in cell[\"segmentation\"]:\n",
-    "                seg = np.array(seg) / jpg_info[img_id][\"scale\"]\n",
-    "                seg = seg.astype(np.int32).tolist()\n",
+    "                seg = np.array(seg).astype(np.int32).tolist()\n",
     "                segmentation.append(seg)\n",
     "            cell[\"segmentation\"] =segmentation \n",
     "            table_new['cells'][idx] = cell\n",
@@ -482,7 +470,7 @@
     "        # 修正空bbox坐标\n",
     "        # table_new = filltable_0000bbox(table_new)\n",
     "        Path(save_dir).mkdir(parents=True, exist_ok=True)\n",
-    "        save_path = os.path.join(save_dir, f'{imgname.split(\".\")[0]}-pred.json')\n",
+    "        save_path = os.path.join(save_dir, f'{img_id}-pred.json')\n",
     "\n",
     "        json.dump(table_new, open(save_path, 'w'), indent=4, ensure_ascii=False)\n",
     "\n"
