--- a/result_visualize_jpg.ipynb
+++ b/result_visualize_jpg.ipynb
@@ -17,7 +17,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 80%|████████  | 4154/5187 [24:20<08:16,  2.08it/s]  "
+      "100%|██████████| 5187/5187 [06:52<00:00, 12.59it/s]\n"
      ]
     }
    ],
@@ -32,6 +32,7 @@
     "import numpy as np\n",
     "from pathlib import Path\n",
     "from tqdm import tqdm\n",
+    "import math\n",
     "\n",
     "\n",
     "def table_img_visualize(src_img_path, pred_json_path, dst_img_path):\n",
@@ -62,12 +63,12 @@
     "        font_scale = max(font_scale, 0.5)\n",
     "        font_thickness = int(font_scale * 2)\n",
     "        font_height = int(font_scale * 20)\n",
-    "        cv2.putText(src_img, text, (x1, y1+font_height), cv2.FONT_HERSHEY_SIMPLEX, font_scale, color.tolist(), font_thickness)\n",
+    "        cv2.putText(src_img, text, (x1, y1+font_height+2), cv2.FONT_HERSHEY_SIMPLEX, font_scale, color.tolist(), font_thickness)\n",
     "\n",
     "    cv2.imwrite(dst_img_path, src_img)\n",
     "\n",
     "# 数据集名称\n",
-    "dataset = \"test_A\"\n",
+    "dataset = \"test_A_jpg\"\n",
     "# 输入数据目录\n",
     "img_data_dir    = f\"/media/ubuntu/Date12/TableStruct/data/{dataset}/\"\n",
     "pred_json_dir   = f\"./output/structure_result/{dataset}-pred.json/\"\n",
@@ -75,10 +76,10 @@
     "pred_visual_dir = f\"./output/structure_result/{dataset}-pred.json_visualize/\"\n",
     "Path(pred_visual_dir).mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "for src_img_path in tqdm(glob(os.path.join(img_data_dir, \"*.png\"))):\n",
+    "for src_img_path in tqdm(glob(os.path.join(img_data_dir, \"*.jpg\"))):\n",
     "    src_img_file = os.path.basename(src_img_path)\n",
-    "    pred_json_path = os.path.join(pred_json_dir, src_img_file.replace(\".png\", \"-pred.json\"))\n",
-    "    dst_img_path = os.path.join(pred_visual_dir, src_img_file.replace(\".png\", \".jpg\"))\n",
+    "    pred_json_path = os.path.join(pred_json_dir, src_img_file.replace(\".jpg\", \"-pred.json\"))\n",
+    "    dst_img_path = os.path.join(pred_visual_dir, src_img_file.replace(\".jpg\", \".jpg\"))\n",
     "    table_img_visualize(src_img_path, pred_json_path, dst_img_path)\n"
    ]
   },
