--- a/ipynb/2.1.result_pkl2pred.ipynb
+++ b/ipynb/2.1.result_pkl2pred.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,7 @@
     "import matplotlib.patches as patches\n",
     "from PIL import Image\n",
     "from tqdm import tqdm\n",
+    "from utils.format_translate import format_table, html_to_table, table_to_latex, check_continuous\n",
     "\n",
     "def format_table_1(table): \n",
     "    layout = table['layout']\n",
@@ -301,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,15 +335,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2593/2593 [00:22<00:00, 115.37it/s]\n",
-      "100%|██████████| 2594/2594 [00:21<00:00, 119.25it/s]\n"
+      " 17%|█▋        | 447/2593 [00:11<01:07, 31.70it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "02859.jpg\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 74%|███████▍  | 1918/2593 [01:14<00:19, 33.82it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "04485.jpg\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 74%|███████▍  | 1918/2593 [01:31<00:19, 33.82it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "04485.jpg\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 97%|█████████▋| 2520/2593 [07:03<00:02, 25.16it/s]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "03669.jpg\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 97%|█████████▋| 2527/2593 [09:30<09:32,  8.67s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "03669.jpg\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2593/2593 [09:31<00:00,  4.53it/s]\n",
+      "100%|██████████| 2594/2594 [01:31<00:00, 28.37it/s]\n"
      ]
     }
    ],
@@ -353,124 +424,45 @@
     "import json\n",
     "from pathlib import Path\n",
     "from glob import glob\n",
+    "import shutil\n",
     "\n",
     "# result_file = \"./output/structure_result/test_A/structure_master_results_0.pkl\"\n",
     "# result_file_dir = os.path.dirname(result_file)\n",
     "\n",
-    "def filltable_0000bbox(table_new):\n",
-    "    row_record_y1 = [[] for i in range(len(table_new['layout']))]\n",
-    "    row_record_y2 = [[] for i in range(len(table_new['layout']))]\n",
-    "    col_record_x1 = [[] for i in range(len(table_new['layout'][0]))]\n",
-    "    col_record_x2 = [[] for i in range(len(table_new['layout'][0]))]\n",
+    "DATASET = \"test_A_jpg480max\"\n",
+    "JPG_JSON_PATH = f\"/media/ubuntu/Date12/TableStruct/new_data/{DATASET}.json\"\n",
+    "JPG_INFO = json.load(open(JPG_JSON_PATH, 'r'))\n",
+    "PRED_PKL_DIR = f\"../output/structure_result/{DATASET}\"\n",
     "\n",
-    "    for i, cell in enumerate(table_new['cells']):\n",
-    "        x1, y1, x2, y2 = cell['bbox']\n",
-    "        if x1 == 0 and y1 == 0 and x2 == 0 and y2 == 0:\n",
-    "            continue\n",
-    "        row_start = cell['row_start_idx']\n",
-    "        row_end   = cell['row_end_idx']\n",
-    "        col_start = cell['col_start_idx']\n",
-    "        col_end   = cell['col_end_idx']\n",
-    "        if row_start == row_end:\n",
-    "            row_record_y1[row_start].append([y1])\n",
-    "            row_record_y2[row_start].append([y2])\n",
-    "        if col_start == col_end:\n",
-    "            col_record_x1[col_start].append([x1])\n",
-    "            col_record_x2[col_start].append([x2])\n",
-    "    \n",
-    "    # 填充空bbox坐标\n",
-    "    for i, cell in enumerate(table_new['cells']):\n",
-    "        x1, y1, x2, y2 = cell['bbox']\n",
-    "        if x1 == 0 and y1 == 0 and x2 == 0 and y2 == 0:\n",
-    "            row_start = cell['row_start_idx']\n",
-    "            row_end   = cell['row_end_idx']\n",
-    "            col_start = cell['col_start_idx']\n",
-    "            col_end   = cell['col_end_idx']\n",
-    "            if len(row_record_y1[row_start]) == 0:\n",
-    "                continue\n",
-    "            if len(row_record_y2[row_end]) == 0:\n",
-    "                continue\n",
-    "            if len(col_record_x1[col_start]) == 0:\n",
-    "                continue\n",
-    "            if len(col_record_x2[col_end]) == 0:\n",
-    "                continue\n",
+    "# 输出路径\n",
+    "PRED_SAVE_DIR = f\"./output/structure_result/{DATASET}-pred.json\"\n",
+    "if os.path.exists(PRED_SAVE_DIR):\n",
+    "    shutil.rmtree(PRED_SAVE_DIR)\n",
+    "Path(PRED_SAVE_DIR).mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "            x1 = int(np.mean(col_record_x1[col_start]))\n",
-    "            x2 = int(np.mean(col_record_x2[col_end]))\n",
-    "            y1 = int(np.mean(row_record_y1[row_start]))\n",
-    "            y2 = int(np.mean(row_record_y2[row_end]))\n",
-    "            table_new['cells'][i]['bbox'] = [x1, y1, x2, y2]\n",
-    "            table_new['cells'][i]['segmentation'] = [[[x1, y1], [x2, y1], [x2, y2], [x1, y2]]]\n",
-    "    \n",
-    "    # 拓展多行多列cell的bbox\n",
-    "    # for i, cell in enumerate(table_new['cells']):\n",
-    "    #     x1, y1, x2, y2 = cell['bbox']\n",
-    "    #     row_start = cell['row_start_idx']\n",
-    "    #     row_end   = cell['row_end_idx']\n",
-    "    #     col_start = cell['col_start_idx']\n",
-    "    #     col_end   = cell['col_end_idx']\n",
-    "    #     if row_start != row_end:\n",
-    "    #         if len(row_record_y1[row_start]) > 0 and len(row_record_y2[row_end]) > 0:\n",
-    "    #             y1 = np.mean(row_record_y1[row_start])\n",
-    "    #             y2 = np.mean(row_record_y2[row_end])\n",
-    "    #     if col_start != col_end:\n",
-    "    #         if len(col_record_x1[col_start]) > 0 and len(col_record_x2[col_end]) > 0:\n",
-    "    #             x1 = np.mean(col_record_x1[col_start])\n",
-    "    #             x2 = np.mean(col_record_x2[col_end])\n",
-    "    #     table_new['cells'][i]['bbox'] = [x1, y1, x2, y2]\n",
-    "    #     table_new['cells'][i]['segmentation'] = [[[x1, y1], [x2, y1], [x2, y2], [x1, y2]]]\n",
-    "    return table_new\n",
-    "\n",
-    "save_dir = \"./output/structure_result/test_A_jpg-pred.json\"\n",
-    "jpg_json_path = \"/media/ubuntu/Date12/TableStruct/data/test_A_jpg.json\"\n",
-    "jpg_info = json.load(open(jpg_json_path, 'r'))\n",
-    "\n",
-    "for result_file in glob(\"./output/structure_result/test_A_jpg/structure_master_results_*.pkl\"):\n",
+    "pkls = glob(os.path.join(PRED_PKL_DIR, \"structure_master_results_*.pkl\"))\n",
+    "for result_file in pkls:\n",
     "    with open(result_file, 'rb') as f:\n",
     "        result_data = pickle.load(f)\n",
     "\n",
     "    for imgname, result in tqdm(result_data.items()):\n",
+    "        if imgname in ['02859.jpg', '04485.jpg', '03669.jpg']:\n",
+    "            print(imgname)\n",
     "        bboxes = remove_empty_bboxes(result['bbox'])\n",
     "        tokens_list = format_tokens(result['text'])\n",
     "\n",
     "        html = get_html(tokens_list, bboxes)\n",
     "        table = html_to_table(html)\n",
-    "        \n",
     "        try:\n",
     "            table_new = format_table(table)\n",
     "        except:\n",
+    "            print(imgname)\n",
     "            ### 去除layout中的-1\n",
     "            table = format_table_1(table)\n",
     "            table_new = format_table(table)\n",
     "        \n",
-    "        # bbox放缩恢复\n",
     "        img_id = imgname.split(\".\")[0]\n",
-    "        if 'jpg' not in save_dir: # 保存jpg的预测结果，无需缩放\n",
-    "            for idx, cell in enumerate(table_new['cells']):\n",
-    "                cell[\"bbox\"] = np.array(cell[\"bbox\"]) / jpg_info[img_id][\"scale\"]\n",
-    "                cell[\"bbox\"] = cell[\"bbox\"].astype(np.int32).tolist()\n",
-    "                segmentation = []\n",
-    "                for seg in cell[\"segmentation\"]:\n",
-    "                    seg = np.array(seg) / jpg_info[img_id][\"scale\"]\n",
-    "                    seg = seg.astype(np.int32).tolist()\n",
-    "                    segmentation.append(seg)\n",
-    "                cell[\"segmentation\"] =segmentation \n",
-    "                table_new['cells'][idx] = cell\n",
-    "\n",
-    "        # 坐标值统一int32\n",
-    "        for idx, cell in enumerate(table_new['cells']):\n",
-    "            cell[\"bbox\"] = np.array(cell[\"bbox\"]).astype(np.int32).tolist()\n",
-    "            segmentation = []\n",
-    "            for seg in cell[\"segmentation\"]:\n",
-    "                seg = np.array(seg).astype(np.int32).tolist()\n",
-    "                segmentation.append(seg)\n",
-    "            cell[\"segmentation\"] =segmentation \n",
-    "            table_new['cells'][idx] = cell\n",
-    "        \n",
-    "        # 修正空bbox坐标\n",
-    "        # table_new = filltable_0000bbox(table_new)\n",
-    "        Path(save_dir).mkdir(parents=True, exist_ok=True)\n",
-    "        save_path = os.path.join(save_dir, f'{img_id}-pred.json')\n",
+    "        save_path = os.path.join(PRED_SAVE_DIR, f'{img_id}-pred.json')\n",
     "\n",
     "        json.dump(table_new, open(save_path, 'w'), indent=4, ensure_ascii=False)\n",
     "\n"
