--- a/ipynb/A2.result_visualize.ipynb
+++ b/ipynb/A2.result_visualize.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 80%|████████  | 4154/5187 [24:20<08:16,  2.08it/s]  "
+      "100%|██████████| 1/1 [00:00<00:00, 26.51it/s]\n"
      ]
     }
    ],
@@ -30,9 +30,12 @@
     "from glob import glob\n",
     "import json\n",
     "import numpy as np\n",
+    "import shutil\n",
     "from pathlib import Path\n",
     "from tqdm import tqdm\n",
     "\n",
+    "# jpg_json_path = \"/media/ubuntu/Date12/TableStruct/data/test_A_jpg.json\"\n",
+    "# jpg_info = json.load(open(jpg_json_path, 'r'))\n",
     "\n",
     "def table_img_visualize(src_img_path, pred_json_path, dst_img_path):\n",
     "    # 彩色检测框\n",
@@ -45,9 +48,10 @@
     "\n",
     "    src_img = cv2.imread(src_img_path)\n",
     "    json_data = json.load(open(pred_json_path, 'r'))\n",
+    "    img_id = os.path.basename(src_img_path).split(\".\")[0]\n",
     "    # 遍历坐标列表\n",
     "    for i, cell in enumerate(json_data[\"cells\"]):\n",
-    "        x1, y1, x2, y2 = np.array(cell['bbox']).astype(dtype=int).tolist()\n",
+    "        x1, y1, x2, y2 = np.array(cell['bbox']).astype(np.int32).tolist()\n",
     "        row_start, row_end = cell[\"row_start_idx\"], cell[\"row_end_idx\"]\n",
     "        col_start, col_end = cell[\"col_start_idx\"], cell[\"col_end_idx\"]\n",
     "        text = f\"{row_start}-{row_end}, {col_start}-{col_end}\"\n",
@@ -66,28 +70,25 @@
     "\n",
     "    cv2.imwrite(dst_img_path, src_img)\n",
     "\n",
-    "# 数据集名称\n",
-    "dataset = \"test_A\"\n",
+    "# 参数：数据集名称\n",
+    "dataset = \"test_A_jpg480max\"\n",
     "# 输入数据目录\n",
-    "img_data_dir    = f\"/media/ubuntu/Date12/TableStruct/data/{dataset}/\"\n",
+    "img_data_dir    = f\"/media/ubuntu/Date12/TableStruct/new_data/{dataset}\"\n",
     "pred_json_dir   = f\"./output/structure_result/{dataset}-pred.json/\"\n",
     "# 输出目录\n",
     "pred_visual_dir = f\"./output/structure_result/{dataset}-pred.json_visualize/\"\n",
+    "if os.path.exists(pred_visual_dir):\n",
+    "    shutil.rmtree(pred_visual_dir)\n",
     "Path(pred_visual_dir).mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "for src_img_path in tqdm(glob(os.path.join(img_data_dir, \"*.png\"))):\n",
+    "file_ext = \"jpg\" if \"jpg\" in dataset else \"png\"\n",
+    "img_paths = sorted(glob(os.path.join(img_data_dir, f\"*.{file_ext}\")))[3669:3670]\n",
+    "for src_img_path in tqdm(img_paths):\n",
     "    src_img_file = os.path.basename(src_img_path)\n",
-    "    pred_json_path = os.path.join(pred_json_dir, src_img_file.replace(\".png\", \"-pred.json\"))\n",
-    "    dst_img_path = os.path.join(pred_visual_dir, src_img_file.replace(\".png\", \".jpg\"))\n",
+    "    pred_json_path = os.path.join(pred_json_dir, src_img_file.replace(f\".{file_ext}\", \"-pred.json\"))\n",
+    "    dst_img_path = os.path.join(pred_visual_dir, src_img_file.replace(f\".{file_ext}\", \".jpg\"))\n",
     "    table_img_visualize(src_img_path, pred_json_path, dst_img_path)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
