--- a/ipynb/A3.result_pred_compare.ipynb
+++ b/ipynb/A3.result_pred_compare.ipynb
@@ -2,14 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5187/5187 [11:41<00:00,  7.39it/s]\n"
+      "  0%|          | 0/5187 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5187/5187 [01:59<00:00, 43.24it/s] \n"
      ]
     }
    ],
@@ -21,15 +28,17 @@
     "import cv2\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
-    "from prettyprinter import cpprint, set_default_style\n",
+    "# from prettyprinter import cpprint, set_default_style\n",
     "\n",
     "# pred_json_dirA = \"./output/structure_result/test_A-pred.json_0702_91.130\"\n",
-    "pred_json_dirA = \"./output/structure_result/test_A-pred.json_0704_91.935\"\n",
-    "pred_json_dirB = \"./output/structure_result/test_A-pred.json\"\n",
+    "pred_json_dirA = \"./output/structure_result/test_A_jpg-pred.json_0704_91.935\"\n",
+    "pred_json_dirB = \"./output/structure_result/test_A_jpg-pred.json\"\n",
     "visualize_dirA = f\"{pred_json_dirA}_visualize\"\n",
     "visualize_dirB = f\"{pred_json_dirB}_visualize\"\n",
-    "diff_save_dir = \"./output/structure_result/diff_map\"\n",
     "\n",
+    "diff_save_dir = \"./output/structure_result/diff_map\"\n",
+    "if os.path.exists(diff_save_dir):\n",
+    "    os.system(f\"rm -rf {diff_save_dir}\")\n",
     "Path(diff_save_dir).mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "for pred_json_path_A in tqdm(glob(os.path.join(pred_json_dirA, \"*-pred.json\"))):\n",
@@ -44,35 +53,15 @@
     "\n",
     "    # 比较layout排布\n",
     "    if dataA['layout'] != dataB['layout']:\n",
-    "        row = max(len(dataA['layout']), len(dataB['layout']))\n",
-    "        col = max(len(dataA['layout'][0]), len(dataB['layout'][0]))\n",
-    "        diff_map = [[0 for i in range(col)] for j in range(row)]\n",
-    "        for i in range(row):\n",
-    "            for j in range(col):\n",
-    "                if i >= len(dataA['layout']) or j >= len(dataA['layout'][0]):\n",
-    "                    diff_map[i][j] = 1\n",
-    "                elif i >= len(dataB['layout']) or j >= len(dataB['layout'][0]):\n",
-    "                    diff_map[i][j] = 1\n",
-    "                else:\n",
-    "                    if dataA['layout'][i][j] != dataB['layout'][i][j]:\n",
-    "                        diff_map[i][j] = 1\n",
     "        imgA = cv2.imread(img_path_A)\n",
     "        imgB = cv2.imread(img_path_B)\n",
     "        widthA, heightA = imgA.shape[1], imgA.shape[0]\n",
     "        widthB, heightB = imgB.shape[1], imgB.shape[0]\n",
-    "        if widthA != widthB:\n",
-    "            imgB = cv2.resize(imgA, (widthB, heightB))\n",
+    "        if widthA != widthB or heightA != heightB:\n",
+    "            imgA = cv2.resize(imgA, (widthB, heightB))\n",
     "        image = np.concatenate([imgA, imgB], axis=1)\n",
-    "        cv2.imwrite(os.path.join(diff_save_dir, f\"{img_id}.jpg\"), image)\n",
-    "        # cpprint(diff_map)\n"
+    "        cv2.imwrite(os.path.join(diff_save_dir, f\"{img_id}.jpg\"), image)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
