--- a/ipynb/A1.dataset_visualize.ipynb
+++ b/ipynb/A1.dataset_visualize.ipynb
@@ -5,22 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "预测结果可视化"
+    "训练集标注可视化"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 5187/5187 [06:52<00:00, 12.59it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import os\n",
@@ -32,11 +24,10 @@
     "import numpy as np\n",
     "from pathlib import Path\n",
     "from tqdm import tqdm\n",
-    "import math\n",
     "\n",
     "\n",
     "def table_img_visualize(src_img_path, pred_json_path, dst_img_path):\n",
-    "    # 彩色检测框\n",
+    "    # 按行生成彩色标注框\n",
     "    col2color = []\n",
     "    for i in range(3):\n",
     "        for j in range(3):\n",
@@ -44,6 +35,7 @@
     "                col2color.append((i*100, j*100, k*100))\n",
     "    col2color = np.array(col2color)\n",
     "\n",
+    "    # 加载图像\n",
     "    src_img = cv2.imread(src_img_path)\n",
     "    json_data = json.load(open(pred_json_path, 'r'))\n",
     "    # 遍历坐标列表\n",
@@ -53,6 +45,7 @@
     "        col_start, col_end = cell[\"col_start_idx\"], cell[\"col_end_idx\"]\n",
     "        text = f\"{row_start}-{row_end}, {col_start}-{col_end}\"\n",
     "\n",
+    "        \n",
     "        if row_end >= col2color.shape[0]:\n",
     "            color = np.array((0, 0, 255))\n",
     "        else:\n",
@@ -63,24 +56,25 @@
     "        font_scale = max(font_scale, 0.5)\n",
     "        font_thickness = int(font_scale * 2)\n",
     "        font_height = int(font_scale * 20)\n",
-    "        cv2.putText(src_img, text, (x1, y1+font_height+2), cv2.FONT_HERSHEY_SIMPLEX, font_scale, color.tolist(), font_thickness)\n",
-    "\n",
+    "        cv2.putText(src_img, text, (x1, y1+font_height), cv2.FONT_HERSHEY_SIMPLEX, font_scale, color.tolist(), font_thickness)\n",
+    "        \n",
     "    cv2.imwrite(dst_img_path, src_img)\n",
     "\n",
     "# 数据集名称\n",
-    "dataset = \"test_A_jpg\"\n",
+    "dataset = \"train_jpg480max\"\n",
     "# 输入数据目录\n",
-    "img_data_dir    = f\"/media/ubuntu/Date12/TableStruct/data/{dataset}/\"\n",
-    "pred_json_dir   = f\"./output/structure_result/{dataset}-pred.json/\"\n",
+    "img_data_dir    = f\"/media/ubuntu/Date12/TableStruct/new_data/{dataset}/\"\n",
+    "json_data_dir    = f\"/media/ubuntu/Date12/TableStruct/new_data/{dataset}_gt_json/\"\n",
     "# 输出目录\n",
-    "pred_visual_dir = f\"./output/structure_result/{dataset}-pred.json_visualize/\"\n",
+    "pred_visual_dir = f\"./output/structure_result/{dataset}-visualize/\"\n",
     "Path(pred_visual_dir).mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "for src_img_path in tqdm(glob(os.path.join(img_data_dir, \"*.jpg\"))):\n",
+    "for src_img_path in tqdm(glob(img_data_dir+\"*.jpg\")):\n",
     "    src_img_file = os.path.basename(src_img_path)\n",
-    "    pred_json_path = os.path.join(pred_json_dir, src_img_file.replace(\".jpg\", \"-pred.json\"))\n",
+    "    pred_json_path = os.path.join(json_data_dir, src_img_file.replace(\".jpg\", \"-gt.json\"))\n",
     "    dst_img_path = os.path.join(pred_visual_dir, src_img_file.replace(\".jpg\", \".jpg\"))\n",
-    "    table_img_visualize(src_img_path, pred_json_path, dst_img_path)\n"
+    "    if os.path.exists(pred_json_path):\n",
+    "        table_img_visualize(src_img_path, pred_json_path, dst_img_path)\n"
    ]
   },
   {
