--- a/ipynb/1.4.dataset_gen_kfold.ipynb
+++ b/ipynb/1.4.dataset_gen_kfold.ipynb
@@ -13,12 +13,7 @@
     "import shutil\n",
     "from glob import glob\n",
     "from tqdm import tqdm\n",
-    "from pathlib import Path\n",
-    "\n",
-    "# from ipynb.utils.utils import parse_relation_from_table, get_span_cells, \\\n",
-    "#     get_shared_line, get_shared_line_id, sort_shared_line, parse_gt_label, extend_text_lines\n",
-    "\n",
-    "from utils.utils import parse_relation_from_table, get_span_cells\n"
+    "from pathlib import Path\n"
    ]
   },
   {
