--- a/ipynb/2.2.result_pred2submit.ipynb
+++ b/ipynb/2.2.result_pred2submit.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,30 +90,9 @@
     "    #     table['cells'][i]['bbox'] = [x0, y0, x1, y1]\n",
     "    #     table['cells'][i]['segmentation'] = [[[x0, y0], [x1, y0], [x1, y1], [x0, y1]]]\n",
     "\n",
-    "    return table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 14/5187 [00:00<00:37, 137.87it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 5187/5187 [00:32<00:00, 158.11it/s]\n"
-     ]
-    }
-   ],
-   "source": [
+    "    return table\n",
+    "\n",
+    "\n",
     "def check_table_format(table):\n",
     "    if 'layout' not in table or 'cells' not in table:\n",
     "        return False\n",
@@ -126,9 +105,23 @@
     "        if 'transcript' not in cell:\n",
     "            return False\n",
     "\n",
-    "    return True\n",
-    "\n",
-    "\n",
+    "    return True\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5187/5187 [00:30<00:00, 170.00it/s]\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "dataset = \"test_A_jpg480max\"\n",
     "pred_json_dir = f\"./output/structure_result/{dataset}-pred.json\"\n",
