--- a/ipynb/A2.infer_visualize.ipynb
+++ b/ipynb/A2.infer_visualize.ipynb
@@ -10,14 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 26.51it/s]\n"
+      " 22%|██▏       | 4/18 [00:00<00:00, 36.75it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 18/18 [00:01<00:00, 17.79it/s]\n"
      ]
     }
    ],
@@ -74,7 +81,9 @@
     "dataset = \"test_A_jpg480max\"\n",
     "# 输入数据目录\n",
     "img_data_dir    = f\"/media/ubuntu/Date12/TableStruct/new_data/{dataset}\"\n",
-    "pred_json_dir   = f\"./output/structure_result/{dataset}-pred.json/\"\n",
+    "img_data_dir    = f\"/media/ubuntu/Date12/TableStruct/data/test_A\"\n",
+    "# pred_json_dir   = f\"./output/structure_result/FINAL_FUSION/\"\n",
+    "pred_json_dir   = f\"./output/structure_result/10fold2_epoch_29_val92.87_test92.21/\"\n",
     "# 输出目录\n",
     "pred_visual_dir = f\"./output/structure_result/{dataset}-pred.json_visualize/\"\n",
     "if os.path.exists(pred_visual_dir):\n",
@@ -82,13 +91,21 @@
     "Path(pred_visual_dir).mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "file_ext = \"jpg\" if \"jpg\" in dataset else \"png\"\n",
-    "img_paths = sorted(glob(os.path.join(img_data_dir, f\"*.{file_ext}\")))[3669:3670]\n",
+    "file_ext = \"png\"\n",
+    "img_paths = sorted(glob(os.path.join(img_data_dir, f\"*.{file_ext}\")))[382:400]\n",
     "for src_img_path in tqdm(img_paths):\n",
     "    src_img_file = os.path.basename(src_img_path)\n",
     "    pred_json_path = os.path.join(pred_json_dir, src_img_file.replace(f\".{file_ext}\", \"-pred.json\"))\n",
     "    dst_img_path = os.path.join(pred_visual_dir, src_img_file.replace(f\".{file_ext}\", \".jpg\"))\n",
     "    table_img_visualize(src_img_path, pred_json_path, dst_img_path)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
